@@ -1,0 +1,3 @@
+SUBDIRS = libgig.xcodeproj
+
+EXTRA_DIST = autoconf_builder.sh wrapper.sh README.osx
